2012-05-14  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #6351: Plugin element displays 'Data Structure ERROR'
	* Released version 1.3.2

2010-11-09  Dmitry Dulepov  <dmitry@typo3.org>

	* Released version 1.3.0

2010-10-27  Dmitry Dulepov  <dmitry@typo3.org>

	* Added a new TS setting to force a certain amount of links to pages
	* Released version 1.2.0

2010-02-02  Dmitry Dulepov  <dmitry.dulepov+typo3svn@gmail.com>

	* Committed some fixes made for clients
	* Mark as compatible with TYPO3 4.3
	* Released version 1.1.0

2009-02-28  Dmitry Dulepov  <dmitry@typo3.org>

	* Added minified version of CSS styles
	* Added urldecode() to fix some older TYPO3 versions

2008-11-21  Dmitry Dulepov  <dmitry@typo3.org>

	* Added more parameters to hook (request from Georg Ringer)

2008-11-11  Dmitry Dulepov  <dmitry@typo3.org>

	* TYPO3 4.3 compatibility fix
	* Fixed "Previous" link
	* Released version 1.0.1

2008-10-31  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug: link to next page shown if current page is greater than maximum pages

2008-07-19  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug: header data is not added

2008-07-18  Dmitry Dulepov  <dmitry@typo3.org>

	* initial code generated with kickstarter